# gaia-agent

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
gaiaagent/: agents.py  config.py  inference.py  logger.py  model.py  tool.py
gaiaagent/prompts/: base_prompt.md  tools_insturctions.md
gaiaagent/tools/: describe_image.py  final_answer.py  openai_speech_to_text.py  read_file.py  table_extractor.py  tools.py  youtube_transcription.py
